data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1715.wast
;; 6. **Test Description**: Embed a `br_if` instruction inside a `loop` and use a true condition. Confirm that the loop restarts from the beginning, emulating a `continue` statement.

(assert_invalid
  (module (func $loop_with_br_if
    (loop 
      (br_if 0 (i32.const 1))
    )
  ))
  "type mismatch"
)